@@ -5,15 +5,15 @@ import java.io.InputStream;
 import java.io.OutputStream;
 
 public class ExternalProgram extends Thread{
-	 private String[] arguments = {"cmd", "/C", "start", "command"};
+	 private String arguments;
 	
 	public ExternalProgram(String s){
-		arguments[3] = s;
+		arguments = s;
 	}
 	
 	public void run(){
         try{
-            Process pr = Runtime.getRuntime().exec(arguments,null, new File(arguments[3]));
+            Process pr = Runtime.getRuntime().exec(new String[] {"cmd.exe", "/C", "start", arguments});
             InputStream in = pr.getInputStream();
             OutputStream out = pr.getOutputStream();
             InputStream err = pr.getErrorStream();
